syntax = "proto3";

package nillion.payments.v1.config;

// A response to a payments configuration request.
message PaymentsConfigResponse {
  // The minimum amount of unil that can be added in a `Payments.add_funds` request.
  uint64 minimum_add_funds_payment = 1;

  // The number of credits one gets for every nil funded to an account.
  uint64 credits_per_nil = 2;
}

